Add order and table management features
Updated BusinessLayer, DataLayer, PresentationLayer, and TransferObject projects to include new classes for handling orders, tables, and their statuses. Introduced new forms and user controls for managing orders and tables in the UI. Enhanced existing components and updated designer files for a cohesive user experience. Overall, these changes significantly improve application functionality and usability.

--- a/DataLayer/DataLayer.csproj
+++ b/DataLayer/DataLayer.csproj
@@ -44,8 +44,11 @@
     <Compile Include="AccountDL.cs" />
     <Compile Include="CategoryDL.cs" />
     <Compile Include="DataProvider.cs" />
+    <Compile Include="OrderDL.cs" />
     <Compile Include="ProductDL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TableDL.cs" />
+    <Compile Include="TableStatusDL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TransferObject\TransferObject.csproj">
