--- a/BussinessLayer/BussinessLayer.csproj
+++ b/BussinessLayer/BussinessLayer.csproj
@@ -43,8 +43,11 @@
   <ItemGroup>
     <Compile Include="AccountBL.cs" />
     <Compile Include="CategoryBL.cs" />
+    <Compile Include="OrderBL.cs" />
     <Compile Include="ProductBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TableBL.cs" />
+    <Compile Include="TableStatusBL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataLayer\DataLayer.csproj">
