--- a/TransferObject/TransferObject.csproj
+++ b/TransferObject/TransferObject.csproj
@@ -43,8 +43,12 @@
   <ItemGroup>
     <Compile Include="Account.cs" />
     <Compile Include="Category.cs" />
+    <Compile Include="OrderDetails.cs" />
+    <Compile Include="Order.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Table.cs" />
+    <Compile Include="TableStatus.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
