--- a/TransferObject/TransferObject.csproj
+++ b/TransferObject/TransferObject.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Compile Include="Account.cs" />
     <Compile Include="Category.cs" />
-    <Compile Include="OrderDetails.cs" />
+    <Compile Include="OrderDetail.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
